...
            <point key="canvasLocation" x="75" y="0.0"/>
        </scene>
        <!--Window Controller-->
        <scene sceneID="R2V-B0-nI4">
            <objects>
                <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
                    <window key="window" title="Money For Nothing" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                        <rect key="contentRect" x="196" y="240" width="480" height="270"/>
                        <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
                        <connections>
                            <outlet property="delegate" destination="B8D-0N-5wS" id="98r-iN-zZc"/>
...
                                </constraints>
                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" borderStyle="border" drawsBackground="YES" id="0DF-P9-VE6">
                                    <font key="font" metaFont="smallSystem"/>
                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                                <accessibility identifier="Output Label"/>
                            </textField>
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QAE-sm-jeo">
                                <rect key="frame" x="456" y="66" width="89" height="32"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="hqQ-AK-QNK"/>
                                </constraints>
                                <buttonCell key="cell" type="push" title="Process" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Jop-Ec-IbA">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="processClick:" target="XfG-lQ-9wD" id="iGa-rP-FFI"/>
                                </connections>
...
                                <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="left" id="wSw-8d-uOf">
                                    <font key="font" metaFont="miniSystem"/>
                                    <mutableString key="title">Input should be in the following format: Line 1: x y (x = number of producers, y = number of consumers) Then x producer lines in format: p d (p = price units sold at, d = date units sold from) Then y consumer lines in format: p d (p = price units bought at, d = day after date at which final unit must be delivered) The output will be th
                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                                <accessibility identifier="Input Description"/>
                            </textField>
                            <button horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="jVN-At-G8u">
                                <rect key="frame" x="65" y="372" width="29" height="26"/>
                                <buttonCell key="cell" type="disclosure" bezelStyle="roundedDisclosure" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="mLK-v9-t1p">
                                    <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
                                    <font key="font" metaFont="system"/>
...
